--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "echarts": "^5.5.1",
     "gray-matter": "^4.0.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^22.12.1",
     "react": "^18",
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "remark-images": "^4.0.0"
+    "remark-images": "^4.0.0",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "eslint": "^8",
