--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
+    "aws-sdk": "^2.1659.0",
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "gray-matter": "^4.0.3",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "node-cron": "^3.0.3",
